--- a/deploymentservice.yml
+++ b/deploymentservice.yml
@@ -7,7 +7,7 @@ metadata:
 spec:
   containers:
   - name: kunteinir
-    image: onstant8/myapp:latest
+    image: nginx:latest
     resources:
       limits:
         memory: "128Mi"
