--- a/deploymentservice.yml
+++ b/deploymentservice.yml
@@ -1,16 +1,33 @@
-apiVersion: v1
-kind: Pod
+apiVersion: apps/v1
+kind: Deployment
 metadata:
-  name: myapp1
-  labels:
-    name: myapp1
+  name: mydeployment
 spec:
-  containers:
-  - name: kunteinir
-    image: nginx:latest
-    resources:
-      limits:
-        memory: "128Mi"
-        cpu: "500m"
-    ports:
-      - containerPort: 80
+  selector:
+    matchLabels:
+      app: myapp
+  template:
+    metadata:
+      labels:
+        app: myapp
+    spec:
+      containers:
+      - name: kunteinir
+        image: nginx
+        resources:
+          limits:
+            memory: "128Mi"
+            cpu: "500m"
+        ports:
+        - containerPort: 80
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: myappserv
+spec:
+  selector:
+    app: mydeployment
+  ports:
+  - port: 80
+    targetPort: 8888
