--- a/deploymentservice.yml
+++ b/deploymentservice.yml
@@ -20,4 +20,16 @@ spec:
             cpu: "500m"
         ports:
         - containerPort: 80
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: myappserv
+spec:
+  selector:
+    app: mydeployment
+  ports:
+  - port: 80
+    targetPort: 8888
+  type: NodePort
 
